--- a/views/nav.html
+++ b/views/nav.html
@@ -28,6 +28,9 @@
 						<span class="mdi-navigation-expand-more"></span>
 					</a>
 					<ul class="dropdown-menu">
+						<li><a href="#/dashboard">
+							<i class="mdi-action-assessment"></i> Dashboard
+						</a></li>
 						<li><a href="" data-toggle="modal" data-target="#pasModal">
 							<i class="mdi-action-lock"></i> Change Password
 						</a></li>
